# vertauri

./: .gitignore  Cargo.toml  README.md  tailwind.config.js
css/: tailwind.css
src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
vertauri/: Cargo.toml  index.html
vertauri/src/: app.rs
vertauri/src-tauri/: Cargo.toml  tauri.conf.json
vertauri/src-tauri/src/: main.rs
